# godworks-os

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RUNBOOK.md  _ASSET_DEPENDENCY_INTEREST_AUDIT.md  _COMPONENT_SCHEMA_ABI_AUDIT.md  _CONTENT_PACKAGE_RESOLVER_GATE.md  _MONITOR_RUNTIME_HEALTH_GATE.md  _QBI_CONSTRAINT_AST_AUDIT.md  justfile
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: product_hardening_task.yml
.github/workflows/: ci.yml  refresh-cargo-lock.yml
client_probes/godot/: client_bridge_contract_adapter.gd  client_bridge_contract_probe.gd  client_bridge_tcp_resync_probe.gd  content_load_probe.gd  cross_broker_handoff_probe.gd  godot_2d_physics_probe.gd  godot_3d_contract_probe.gd  project.godot
crates/godworks-client-sdk/: Cargo.toml
crates/godworks-client-sdk/examples/: agar_live_cache_gate.rs
crates/godworks-client-sdk/src/: lib.rs
crates/godworks-core/: Cargo.toml
crates/godworks-protocol/: Cargo.toml
crates/godworks-protocol/src/: json.rs  lib.rs
crates/godworks-worker-sdk/: Cargo.toml  README.md
crates/godworks-worker-sdk/examples/: minimal_worker.rs
crates/godworks-worker-sdk/src/: lib.rs
docs/: assembly-handoff-reality-gate.md  asset-dependency-interest.md  component-schema-content-abi.md  content-package-resolver.md  current-state.md  godot-content-load-probe.md  monitor-runtime-health-gate.md  qbi-constraint-ast.md  reality-loadgen-authority-gate.md  snapshot-artifact-gate.md
docs/baseline/: checklist.md
docs/engineering/: drift-guard.md  wal-event-inventory.md
docs/ops/: agent-eval-cases.jsonl  agent-reality-gate.md  agent-trace.schema.json  component-registry-gate.md  env-vars.md  live-game-reality-gates.md  model-plane-action-abi.md  replay-tape.md  security-threat-model.md  snapshot-restore-gate.md  system-laws-gate.md  system-laws.jsonl
docs/protocol/: component-registry.md  entity-lifecycle-semantics.md  event-command-semantics.md  response-admin-coverage-notes.md  v1-draft.md
docs/roadmap/: product-hardening.md
docs/sdk/: client-sdk-alpha.md  issue-16-pr-readiness.md  worker-sdk-mvp.md  zone-worker-migration-plan.md
docs/spatial/: 3d-foundation.md
examples/agar/: README.md  gw_agar_capture_cut.js  gw_agar_gate.js  gw_agar_gateway.js  gw_agar_pixel_gate.js  gw_agar_restore_gate.js  gw_agar_soak_gate.js  run_agar_demo.ps1  (+1 more)
scripts/: ensure_godot_4_3.ps1  issue16_gate.ps1  run_godot_probes.ps1  runtime_smoke.ps1
src/: main.rs  replay_tape.rs  wal.rs
tests/: reality_loadgen_runtime.rs  wal_inspect_cli.rs  zone_worker_runtime.rs
tools/: agent_reality_gate_lint.py  godot_probe_inventory.py  pr_invariant_gate.py  system_laws_lint.py  system_laws_test_inventory.py
(+43 files in other folders)
